# appgenerator_helper_2.1

./: README.md  app.py  pyproject.toml  requirements.txt
static/: .gitignore  fetch_assets  tailwind-local.css
templates/: _common.sh.j2  backup.j2  base.html  change_url.j2  index.html  install.j2  manifest.j2  nginx.j2  remove.j2  restore.j2  systemd.j2  tests.j2  upgrade.j2
translations/fr/LC_MESSAGES/: messages.mo  messages.po
